k8s/envoy-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: envoy-proxy
  name: envoy-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: envoy-proxy
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/travel: "true"
        io.kompose.service: envoy-proxy
    spec:
      containers:
        - image: ghcr.io/hblok/ct_envoy_distroless:v1.32
          name: envoy-proxy
          ports:
            - containerPort: 12000
            - containerPort: 9901
          resources: {}
      imagePullSecrets:
        - name: regcred	 
      restartPolicy: Always
status: {}
