k8s/nginx-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx-web
  name: nginx-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/travel: "true"
        io.kompose.service: nginx-web
    spec:
      containers:
        - image: ghcr.io/hblok/ct_nginx_web:latest
          name: nginx-web
          resources: {}
      imagePullSecrets:
        - name: regcred	  
      restartPolicy: Always
status: {}
