k8s/travel-grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: travel-grpc
  template:
    metadata:
      labels:
        io.kompose.network/travel: "true"
        io.kompose.service: travel-grpc
    spec:
      containers:
        - image: ghcr.io/hblok/ct_travel_server:latest
          name: travel-grpc
          imagePullPolicy: Always
          resources: {}
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      hostname: travel-grpc
status: {}
