k8s/envoy-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: envoy-proxy
  name: envoy-proxy
spec:
  ports:
    - name: "12000"
      port: 12000
      targetPort: 12000
    - name: "9901"
      port: 9901
      targetPort: 9901
  selector:
    io.kompose.service: envoy-proxy
  type: LoadBalancer
status:
  loadBalancer: {}
