k8s/travel-grpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: travel-grpc
  name: travel-grpc
spec:
  ports:
    - name: "12002"
      port: 12002
      targetPort: 12002
  selector:
    io.kompose.service: travel-grpc
