k8s/travel-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: travel
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/travel: "true"
  podSelector:
    matchLabels:
      io.kompose.network/travel: "true"
